--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>foo bar fooo</title>
+    <title>Document</title>
   </head>
 
-  <body></body>
+  <body class="body root__body"></body>
 </html>
